--- a/app/index.html
+++ b/app/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My Cool Project</title>
+    <title>The Color Clock</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/bundle.css">
   </head>
   <body>
     <div class="container">
-      <p>Welcome to your life.</p>
+      <div class="clock"></div>
     </div>
     <script src="js/main.js"></script>
   </body>
