--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="clock"></div>
+      <div class"clock" id="clock"></div>
     </div>
     <script src="js/main.js"></script>
   </body>
