--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="container">
-      <p>Welcome to your life.</p>
+      <div class="clock" id="clock"></div>
+      </div>
     </div>
     <script src="js/main.js"></script>
   </body>
