Was able to make a new function, so that background changes every 2 seconds, while clock changes every second. Also changed font style.

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <title>The Color Clock</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/bundle.css">
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="container">
